Even more cleanup